--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^4.5.1"
